# polls-test-deploy

./: create_superuser.py  db.sqlite3  docs  pyproject.toml  requirements.txt
.github/workflows/: CI.yml
django_polls/: README.md  admin.py  models.py  tests.py  urls.py  views.py
django_polls/migrations/: 0001_initial.py
django_polls/static/polls/: style.css
django_polls/templates/polls/: index.html
mysite/: settings.py  urls.py
